# Operating-System

./: .gitignore  README.md  gitcommands.md
os/: .gitignore  Cargo.toml  closedisk.sh  gendisk.sh  opendisk.sh  os.img  os.qcow2  os.tar  os.tar.orig  osb.img  run.sh  setup.bat
os/.cargo/: config.toml
os/fs/: Cargo.toml
os/src/: allocator.rs  ata_block_driver.rs  brainf.rs  commands.rs  floppy_block_driver.rs  gdt.rs  interrupts.rs  keyboard_routing.rs  lib.rs  main.rs  memory.rs  rng.rs  serial.rs  speaker.rs  tetris.rs  timer_routing.rs  ustar.rs  vga_buffer.rs  vi.rs
os/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
os/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
