[package]
name = "os"
version = "0.1.0"
authors = ["Griffin Walraven <griffin.walraven@gmail.com>", "Otis Root <otis@otisroot.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.0"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]